# rustcluster

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmark.py  benchmark_threads.py  index.rs  kernels.rs
docs/: architecture-decisions.md  bar-review-output.md  blas-backend-deep-research.md  blas-backend-research-prompt.md  blog-building-rustcluster.md  blog-post-architecture.md  blog-post-cluster-memory.md  blog-post-cluster-slotting-v2.md  blog-post-cluster-slotting.md  blog-post-semantic-compression.md  blog-v1.2-retrospective-draft.md  blog-v1.2-retrospective-outline-v2.md  cluster-slotting-v2-build-log.md  cluster-slotting-v2-requirements.md  databricks-memory-architecture.md  embedding-cluster v2-development-strategy-deep-research.md  embedding-cluster-test-plan.md  embedding-cluster-v2-development-strategy-deep-research.md  embedding-cluster-v2-research-findings.md  embedding-cluster-v2-research-prompt.md  embedding-cluster-whitepaper.md  embedding-clustering-guide.md  embedding-reducer-requirements.md  gpu-acceleration-for-rustcluster-deep-research.md  gpu-acceleration-research-prompt.md  index-faer-tuning-plan.md  index-performance-plan.md  index-python-polish-plan.md  lessons-building-rustcluster.md  memory-optimization-requirements.md  numpy-scipy-blas-bundling-deep-research.md  pca-optimization-plan.md  purpose-built-embedding-clustering-algorithm-deep-research.md  pyo3-performance.md  python-in-rust-lessons.md  python-in-rust-notes.md  python-rust-hybrid-repositories-deep-research.md  rust-ann-ecosystem-deep-research.md  rust-backed-python-clustering-deep-research.md  rust-ml-landscape.md  (+11 more)
examples/: probe_batched_dot.rs  probe_fused_spike.rs  probe_pulp_dot.rs  probe_search.rs  probe_similarity_graph.rs  profile_ip_batch.rs  profile_similarity_graph.rs
experiments/: cross_rulings_experiments.py  exp1_chapter_recovery.py  exp2_a_vs_b.py  exp3_pca_ablation.py  exp4_vs_sklearn.py  exp5_bic_sweep.py  exp6_hamerly_speedup.py  exp6b_hamerly_full.py  exp7_reducer_workflow.py  exp8_faer_pca_benchmark.py  exp9_faer_quality.py  exp_index_databricks_port.py  exp_snapshot_benchmark.py  exp_snapshot_cross_rulings.py  exp_snapshot_separation.py  exp_v2_validation.py
experiments/results/: exp1_chapter_recovery.md  exp1_chapter_recovery_v2.md  exp2_a_vs_b.md  exp3_pca_ablation.md  exp4_vs_sklearn.md  exp5_bic_sweep.md  exp6_hamerly_speedup.md  exp7_reducer_workflow.md  exp8_faer_pca_benchmark.md  exp9_faer_quality.md  v1_lessons_learned.md
notebooks/: clustering_methodology.md  clustering_methodology_ultra.md  clustering_validation_queries.sql  supplier_clustering_rustcluster.py  supplier_clustering_ultra.py  supplier_snapshot_experiment.py  supplier_v2_validation.py  test_pypi_package.py
python/rustcluster/: __init__.py  experimental.py  hierarchical.py  index.py  index.pyi  snapshot.py
rustcluster-simd/: Cargo.toml
rustcluster-simd/proptest-regressions/: dot.txt
rustcluster-simd/src/: batched_dot.rs  dot.rs  fused.rs  l2.rs  lib.rs  microkernel.rs
src/: agglomerative.rs  dbscan.rs  distance.rs  error.rs  hamerly.rs  hdbscan.rs  kdtree.rs  kmeans.rs  lib.rs  metrics.rs  minibatch_kmeans.rs  snapshot.rs  snapshot_io.rs  utils.rs
src/embedding/: evaluation.rs  fusion.rs  mod.rs  normalize.rs  reducer.rs  reduction.rs  spherical_hamerly.rs  spherical_kmeans.rs  spherical_minibatch.rs  vmf.rs
src/index/: flat.rs  ids.rs  kernel.rs  mod.rs  persistence.rs  similarity_graph.rs  topk.rs
tests/: test_agglomerative.py  test_dbscan.py  test_embedding.py  test_embedding_reducer.py  test_hdbscan.py  test_index_flat.py  test_index_perf.py  test_index_persistence.py  test_index_similarity_graph.py  test_kmeans.py  test_metrics.py  test_minibatch_kmeans.py  test_serialization.py  test_snapshot.py  test_snapshot_v2.py
