[workspace]
members = ["rustcluster-simd"]
# The root `rustcluster` package is an implicit member.

[package]
name = "rustcluster"
version = "0.6.0"
edition = "2021"
description = "A Rust-backed Python clustering library"
license = "MIT"

[lib]
name = "rustcluster"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3/extension-module", "dep:numpy"]
# Reverts ip_batch to the v1.1 path (faer matmul + scalar GEMV).
# Escape hatch for one release; remove once v1.2 is field-validated.
faer-fallback = []

[dependencies]
pyo3 = { version = "0.23", optional = true }
numpy = { version = "0.23", optional = true }
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1"
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
thiserror = "2"
faer = "0.24"
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# v1.2 SIMD kernels. Path-dep until v1.3 stabilizes the API and we
# decide whether to publish to crates.io.
rustcluster-simd = { path = "rustcluster-simd" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
# Used by examples/probe_pulp_dot.rs (Step 0a of v1.2). Pinned to match
# faer 0.24's transitive dep so we don't pull two pulp versions.
pulp = "0.22"

[[bench]]
name = "kernels"
harness = false

[[bench]]
name = "index"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
debug = false
