[workspace]
members = ["rustcluster-simd"]
# The root `rustcluster` package is an implicit member.

[package]
name = "rustcluster"
version = "0.6.0"
edition = "2021"
description = "A Rust-backed Python clustering library"
license = "MIT"

[lib]
name = "rustcluster"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3/extension-module", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.23", optional = true }
numpy = { version = "0.23", optional = true }
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1"
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
thiserror = "2"
faer = "0.24"
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
# Used by examples/probe_pulp_dot.rs (Step 0a of v1.2). Pinned to match
# faer 0.24's transitive dep so we don't pull two pulp versions.
pulp = "0.22"
# rustcluster-simd is a workspace member shipping the v1.2 SIMD kernels
# (dot_f32, l2sq_f32, batched_dot_tile, fused_threshold_emit_*). The
# rustcluster lib itself does NOT depend on it — faer's GEMM remains
# the production hot path because the simd kernels haven't yet matched
# faer's perf at all production shapes (see `examples/probe_search.rs`
# and `docs/v1.2-execution-plan.md`). Used here as a dev-dep for
# benchmarks and probes only.
rustcluster-simd = { path = "rustcluster-simd" }

[[bench]]
name = "kernels"
harness = false

[[bench]]
name = "index"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
debug = false
