[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rustcluster"
version = "0.1.0"
description = "A Rust-backed Python clustering library"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "scikit-learn>=1.3"]

[tool.maturin]
python-source = "python"
module-name = "rustcluster._rustcluster"
features = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
